package com.cicd.demo.model;

public enum BuildStatus {
    PENDING,
    RUNNING,
    SUCCESS,
    FAILURE
}
